--- a/Prácticas de I O en sistemas embebidos v1.0/Readme.me
+++ b/Prácticas de I O en sistemas embebidos v1.0/Readme.me
@@ -1,13 +1,4 @@
 Prácticas de I/O en sistemas embebidos v1.0
 
-Bienvenido a las practicas con sistemas embebidos, en la misma
-desarrollaremos la ejercitación del lenguaje CPP para sistemas embebidos
-con VsCode @ PlatformIO, con el framework de Arduino.
-La modalidad será la siguiente:
-Cada practica se desarrollará en forma grupal, debiendo subir el desarrollo
-de la misma al repositorio ( respetando la estructura de monorepositorio)
-establecido por grupo. Los ejercicios serán implementados de forma que a
-cada integrante le corresponda 1 o más tareas (issues); por lo que deberán
-crear el proyecto correspondiente, con la documentación asociada si hiciera
-falta, y asignar los issues por integrante. De esta forma quedara
-documentada la colaboración de cada alumno. 
+Actividad 1.6
+Actividad 2.2
